--- a/src/Contacts/Contacts.module.scss
+++ b/src/Contacts/Contacts.module.scss
@@ -3,6 +3,7 @@
 
 .contactsContainer {
   background-color: $bgSecondColor;
+  min-height: 86vh;
 
   .contactsBlock {
     @include flex(flex,column);
