--- a/src/Nav/Nav.module.scss
+++ b/src/Nav/Nav.module.scss
@@ -2,7 +2,7 @@
 
 .nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   font-family: 'Josefin Sans', sans-serif;
   text-transform: uppercase;
 }
