--- a/src/Header/Header.module.scss
+++ b/src/Header/Header.module.scss
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    height: 70px;
     width: 100%;
     margin: 0 auto;
     position: fixed;
